fixed spaces css issue and background color issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,8 +107,6 @@ button {
   width: 15px;
 }
 
-
-
 .show {
   color: #fff;
   background-color: #4ac0d5;
@@ -196,7 +194,7 @@ button {
 }
 
 .lose {
-  background-color: #f5785f;
+  background-color: var(--color-lose);
 }
 
 .lose a {
